// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkOwaspTop10Training should handle projects with expired training 1`] = `
{
  "owaspTop10Training": {
    "description": "At least One Primary Maintainer has taken TBD Training on OWASP Top 10 or Equivalent",
    "level": {
      "graduated": "expected",
      "incubating": "expected",
      "retiring": "expected",
    },
    "name": "OWASP Top 10 Training",
    "projects": {
      "Project4": {
        "globalAchievement": false,
        "rationale": "The team has not completed the required training or requires an update.",
      },
    },
    "url": "https://openjs-security-program-standards.netlify.app/details/item-1",
  },
}
`;

exports[`checkOwaspTop10Training should handle projects with no additional information 1`] = `
{
  "owaspTop10Training": {
    "description": "At least One Primary Maintainer has taken TBD Training on OWASP Top 10 or Equivalent",
    "level": {
      "graduated": "expected",
      "incubating": "expected",
      "retiring": "expected",
    },
    "name": "OWASP Top 10 Training",
    "projects": {
      "Project3": {
        "globalAchievement": false,
        "rationale": "The team has not completed the required training or requires an update.",
      },
    },
    "url": "https://openjs-security-program-standards.netlify.app/details/item-1",
  },
}
`;

exports[`checkOwaspTop10Training should update checks with project compliance data 1`] = `
{
  "owaspTop10Training": {
    "description": "At least One Primary Maintainer has taken TBD Training on OWASP Top 10 or Equivalent",
    "level": {
      "graduated": "expected",
      "incubating": "expected",
      "retiring": "expected",
    },
    "name": "OWASP Top 10 Training",
    "projects": {
      "Project1": {
        "globalAchievement": true,
        "rationale": "Training completed",
      },
      "Project2": {
        "globalAchievement": false,
        "rationale": "The team has not completed the required training or requires an update.",
      },
    },
    "url": "https://openjs-security-program-standards.netlify.app/details/item-1",
  },
}
`;
